# AppCrew

./: .env.example  .gitignore  App.jsx  DESIGN.md  Dockerfile  MEMORY.md  README.md  SECURITY_NOTES.md  arquitectura_tecnica.md  config.yaml  demo_evidence.txt  demo_siren.py  docker-compose.yml  estado_mvp_vs_produccion.md  guion_presentacion_lunes.md  plan_hardening_30_60_dias.md  propuesta_comercial_global_executive_agentes.md  prototipo_interfaz.md  prototipo_interfaz_v2.md  pyproject.toml  resumen_y_roadmap.md  run.py  run.sh
.crew/: ACCEPTANCE.md  COMMANDS.md  DEMO.md  LEDGER.md  START.md
agents/: base.py  browser_agent.py  career_context.py  ceo.py  criteria_agent.py  deduplication_agent.py  demand_radar.py  doctrine_keeper.py  evidence_agent.py  fit_scoring.py  intake_agent.py  knowledge.py  memory_update_agent.py  normalization_agent.py  outreach.py  qa.py  talent_signal.py  talent_sourcing.py  tester.py
contracts/: __init__.py  talent.py
core/: browser.py  cloning_engine.py  config.py  demo_notifiers.py  heartbeat.py  orchestrator.py  state.py  talent_pool.py  telegram_notifier.py  workspace.py
crew/: .env.example  AGENTS.md  HARNESS.md  README.md  docker-compose.yml
dashboard/: api_v1.py  server.py
data/: demo_golden_candidates.yaml  demo_rodri_criteria.yaml  shortlist_cache.json  workspaces.yaml
deploy/: platform.service
docs/: ROADMAP.md
doctrine/: philosophy.yaml
frames/: iphone-16-pro.jsx
scripts/: demo_criterion_intake.py  demo_reset.sh  demo_talent_mission.py  demo_tamper.sh  demo_verify.py
specs/: _index.md  ceo.md  demand_radar.md  (+8 more)
(+64 files in other folders)
