[project]
name = "cerno"
version = "0.1.0"
description = "Cerno — Plataforma de sourcing asistido con pipeline de responsabilidad y revisión ciega"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27.0",
    "firecrawl-py>=0.0.12",
    "pydantic-settings>=2.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cerno = "run:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
